fix tabicons on ios, force md entirely

--- a/src/theme/icons.scss
+++ b/src/theme/icons.scss
@@ -7,11 +7,9 @@
 .ion-md-nachrichten, .ion-ios-nachrichten,
 .ion-md-crac-profil, .ion-ios-crac-profil
 {
-  height: 1em;
-  width: 1em;
   &::before{
-    height: 100%;
-    width: 100%;
+    height: 1em;
+    width: 1em;
     display: inline-block;
     content: "";
     background-repeat: no-repeat;
